--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-insta-stories": "^2.5.9",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
