--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-insta-stories": "^2.5.9",
+    "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "swiper": "^9.2.4",
