--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
