--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.1.1",
     "firebase": "^9.21.0",
+    "jsonwebtoken": "^9.0.0",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-insta-stories": "^2.5.9",
     "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.11.1",
