--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-insta-stories": "^2.5.9",
