--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "experiment-labs-masters"
-  }
+    "default": "website-3caba",
+    "Website": "website-3caba"
+  },
+  "targets": {},
+  "etags": {}
 }
