--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-insta-stories": "^2.5.9",
     "react-multi-carousel": "^2.8.3",
