--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.1.1",
     "firebase": "^9.21.0",
     "jsonwebtoken": "^9.0.0",
     "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
