--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.374.0",
     "@emailjs/browser": "^3.11.0",
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.3",
+    "@mui/material": "^5.14.3",
+    "@mui/x-date-pickers": "^6.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.1",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.1.1",
     "firebase": "^9.21.0",
     "jsonwebtoken": "^9.0.0",
