--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scroll": "^1.8.9",
     "react-vertical-timeline-component": "^3.6.0",
     "reactjs-popup": "^2.0.5",
+    "sweetalert2": "^11.7.20",
     "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
