--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.14.3",
-    "@mui/x-date-pickers": "^6.10.2",
+    "@mui/material": "^5.14.4",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-date-pickers": "^6.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -38,6 +39,7 @@
     "react-scroll": "^1.8.9",
     "react-vertical-timeline-component": "^3.6.0",
     "reactjs-popup": "^2.0.5",
+    "styled-components": "^5.3.11",
     "sweetalert2": "^11.7.20",
     "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
