--- a/package.json
+++ b/package.json
@@ -7,25 +7,32 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.8",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.14.3",
+    "@mui/material": "^5.14.4",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-charts": "^6.0.0-alpha.6",
     "@mui/x-date-pickers": "^6.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "chart.js": "^4.3.1",
+    "chart.js": "^4.3.3",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
     "dotenv": "^16.1.1",
     "firebase": "^9.21.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.1",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
+    "react-google-charts": "^4.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
@@ -38,6 +45,8 @@
     "react-scroll": "^1.8.9",
     "react-vertical-timeline-component": "^3.6.0",
     "reactjs-popup": "^2.0.5",
+    "recharts": "^2.7.3",
+    "styled-components": "^5.3.11",
     "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
