--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.9",
     "dotenv": "^16.1.1",
     "firebase": "^9.21.0",
+    "jodit-react": "^1.3.39",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "qs": "^6.11.2",
