--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@fontsource/inter": "^5.0.8",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.14.4",
+    "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-charts": "^6.0.0-alpha.6",
     "@mui/x-date-pickers": "^6.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.41.1",
     "aws-sdk": "^2.1435.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
