--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.41.1",
+    "assert": "^2.1.0",
     "aws-sdk": "^2.1435.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
     "country-flag-icons": "^1.5.7",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
     "dotenv": "^16.1.1",
     "firebase": "^9.21.0",
+    "google-api-client": "^2.1.0",
+    "googleapis": "^126.0.1",
     "http-proxy-middleware": "^2.0.6",
     "jodit-react": "^1.3.39",
     "jsonwebtoken": "^9.0.0",
@@ -54,6 +58,7 @@
     "react-vertical-timeline-component": "^3.6.0",
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.7.3",
+    "stream": "^0.0.2",
     "styled-components": "^5.3.11",
     "sweetalert2": "^11.7.20",
     "swiper": "^9.2.4",
