--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
     "react-sortablejs": "^6.1.4",
     "react-vertical-timeline-component": "^3.6.0",
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.7.3",
+    "slick-carousel": "^1.8.1",
     "sortablejs": "^1.15.0",
     "stream": "^0.0.2",
     "styled-components": "^5.3.11",
