--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,7 +16,7 @@
       "purpose": "maskable"
     },
     {
-      "src": "icon512.png",
+      "src": "experimentLabsIcon512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
@@ -25,6 +25,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff",
+  "background_color": "#000000",
   "prefer_related_applications": true
 }
