--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Experiment Labs",
   "icons": [
     {
-      "src": "maskable_icon.png",
+      "src": "experimentLabsIcon196.png",
       "sizes": "196x196",
       "type": "image/png",
       "purpose": "maskable"
