--- a/public/manifest.json
+++ b/public/manifest.json
@@ -29,7 +29,7 @@
    
  
   ],
-  "start_url": "http://localhost:3000/",
+  "start_url": "https://experiment-lab-db58b.web.app/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#000000",
