--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-datetime-picker": "^5.5.1",
     "react-dom": "^18.2.0",
+    "react-faq-component": "^1.3.4",
     "react-ga4": "^2.1.0",
     "react-google-calendar-api": "^2.3.0",
     "react-google-charts": "^4.0.1",
