--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.8",
     "@fontsource/roboto": "^4.5.8",
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/react": "^6.1.10",
     "@google-cloud/firestore": "^6.7.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.14.5",
@@ -17,7 +21,7 @@
     "@mui/x-charts": "^6.0.0-alpha.6",
     "@mui/x-date-pickers": "^6.10.2",
     "@supabase/auth-helpers-react": "^0.4.2",
-    "@supabase/supabase-js": "^2.33.2",
+    "@supabase/supabase-js": "^2.39.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
