--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-insta-stories": "^2.5.9",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.3",
     "react-phone-number-input": "^3.3.4",
     "react-router-dom": "^6.11.1",
