--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-charts": "^6.0.0-alpha.6",
     "@mui/x-date-pickers": "^6.10.2",
+    "@react-oauth/google": "^0.12.1",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.3",
     "@testing-library/jest-dom": "^5.16.5",
