--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "apexcharts": "^3.41.1",
     "assert": "^2.1.0",
     "aws-sdk": "^2.1435.0",
-    "axios": "^1.4.0",
+    "axios": "^1.6.5",
     "chart.js": "^4.3.3",
     "country-flag-icons": "^1.5.7",
     "crypto": "^1.0.1",
@@ -73,6 +73,7 @@
     "react-sortablejs": "^6.1.4",
     "react-tabs": "^6.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "react-youtube": "^10.1.0",
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.7.3",
     "slick-carousel": "^1.8.1",
