--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-slick": "^0.29.0",
     "react-sortablejs": "^6.1.4",
     "react-tabs": "^6.0.2",
+    "react-to-print": "^2.14.15",
     "react-vertical-timeline-component": "^3.6.0",
     "react-youtube": "^10.1.0",
     "reactjs-popup": "^2.0.5",
@@ -83,7 +84,8 @@
     "sweetalert2": "^11.7.20",
     "swiper": "^11.0.5",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
