--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "apexcharts": "^3.41.1",
+    "apexcharts": "^3.45.2",
     "assert": "^2.1.0",
     "aws-sdk": "^2.1435.0",
     "axios": "^1.6.5",
@@ -35,6 +35,7 @@
     "country-flag-icons": "^1.5.7",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.1.1",
     "firebase": "^9.21.0",
