--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.7.3",
     "slick-carousel": "^1.8.1",
+    "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "sortablejs": "^1.15.0",
     "stream": "^0.0.2",
