--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-datetime-picker": "^5.5.1",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-faq-component": "^1.3.4",
     "react-ga4": "^2.1.0",
     "react-google-calendar-api": "^2.3.0",
