--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.3",
     "react-phone-number-input": "^3.3.9",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
