--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-datetime-picker": "^5.5.1",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
+    "react-facebook-pixel": "^1.0.4",
     "react-faq-component": "^1.3.4",
     "react-ga4": "^2.1.0",
     "react-google-calendar-api": "^2.3.0",
@@ -124,6 +125,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.6",
     "@types/sortablejs": "^1.15.2",
     "tailwindcss": "^3.3.2"
   }
