--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "googleapis": "^126.0.1",
     "http-proxy-middleware": "^2.0.6",
     "jodit-react": "^1.3.39",
-    "jsonwebtoken": "^9.0.0",
+    "jose": "^5.6.3",
     "mammoth": "^1.6.0",
     "moment": "^2.29.4",
     "qs": "^6.11.2",
