--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "styled-components": "^5.3.11",
     "sweetalert2": "^11.7.20",
     "swiper": "^11.0.5",
+    "ua-parser-js": "^1.0.38",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
@@ -114,7 +115,6 @@
       "react-app/jest"
     ]
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
